# f-docs

./: .env.example  .gitignore  App.tsx  LICENSE  MANIFEST.in  README.md  constants.ts  f_docs.py  index.html  metadata.json  nexus_ui.py  package-lock.json  package.json  pyproject.toml  serve_docs.py  types.ts  vite.config.ts
.github/workflows/: deploy-pages.yml
FDocs/: __init__.py
components/: EndpointCard.tsx  JsonDisplay.tsx  MarkdownDisplay.tsx  McpConnection.tsx  McpItemCard.tsx  McpTester.tsx  MethodBadge.tsx  SocketIoTester.tsx  ThemeContext.tsx  WebSocketTester.tsx
f_docs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: App.tsx  constants.ts  index.css  index.html  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
frontend/components/: EndpointCard.tsx  JsonDisplay.tsx  JsonEditor.tsx  MarkdownDisplay.tsx  McpConnection.tsx  McpItemCard.tsx  McpTester.tsx  MessageRenderer.tsx  MethodBadge.tsx  SocketIoTester.tsx  ThemeContext.tsx  WebSocketTester.tsx
frontend/hooks/: useWebSocket.ts
frontend/services/: geminiService.ts  mcpSdkService.ts  openapiParser.ts
hooks/: useEndpointPersistence.ts  useMcp.ts  useSocketIO.ts  useWebSocket.ts
services/: mcpSdkService.ts  mockApiService.ts  openapiParser.ts
