[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f-docs"
version = "0.1.0"
authors = [
  { name="FILM6912" },
  { name="F-Docs Contributors" },
]
description = "FastAPI documentation generator with a premium React UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "fastapi-mcp>=0.4.0",
    "websockets",
    "python-socketio"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["FDocs*"]

[tool.setuptools.package-data]
"FDocs" = ["dist/**"]

[project.urls]
"Homepage" = "https://github.com/FILM6912/f-docs"
